--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "nextjs",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 5000",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start --port 5000"
+    "start": "next start"
   },
   "dependencies": {
     "@apollo/client": "^3.5.5",
