--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "apollo-link-http": "^1.5.17",
     "bootstrap": "^5.1.3",
     "dayjs": "^1.10.7",
+    "dotenv": "^16.0.3",
     "fs": "0.0.1-security",
     "fs.promises": "^0.1.0",
     "geolib": "^3.3.3",
